@@ -2,17 +2,17 @@
 <HTML>
 <HEAD>
 	<META HTTP-EQUIV="CONTENT-TYPE" CONTENT="text/html; charset=utf-8">
-	<TITLE>NONPORTABLEISSUES manual page</TITLE>
+	<TITLE>PORTABILITYISSUES manual page</TITLE>
 	<META NAME="GENERATOR" CONTENT="OpenOffice.org 1.1.3  (Linux)">
 	<META NAME="CREATED" CONTENT="20050505;322600">
-	<META NAME="CHANGED" CONTENT="20050505;23554500">
+	<META NAME="CHANGED" CONTENT="20050506;11312700">
 	<!-- manual page source format generated by PolyglotMan v3.2, -->
 	<!-- available at http://polyglotman.sourceforge.net/ -->
 </HEAD>
 <BODY LANG="en-GB" BGCOLOR="#ffffff" DIR="LTR">
 <P><A HREF="#toc">Table of Contents</A></P>
 <H2><A HREF="#toc0" NAME="sect0">Name</A></H2>
-<P STYLE="font-weight: medium">Non-portable issues</P>
+<P STYLE="font-weight: medium">Portability issues</P>
 <H2><A HREF="#toc1" NAME="sect1">Synopsis</A></H2>
 <P><B>Thread priority</B></P>
 <H2><A HREF="#toc2" NAME="sect2">Description</A></H2>
